[gd_scene load_steps=12 format=3 uid="uid://cfh818c4qff5e"]

[ext_resource type="FontFile" uid="uid://bidivll5qqrk" path="res://paneles/MaldiniBold.ttf" id="1_30xwk"]
[ext_resource type="Script" path="res://paneles/panel_menuprincipal/menu_principal.gd" id="1_myjg2"]
[ext_resource type="Texture2D" uid="uid://bk1pbb5dvf4pu" path="res://mapa/res/background4b.png" id="2_13wot"]
[ext_resource type="Texture2D" uid="uid://guy6yikhdvly" path="res://paneles/panel_menuprincipal/pepe.png" id="3_608ic"]

[sub_resource type="Theme" id="Theme_pmavv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un6j2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pk2uy"]
bg_color = Color(0.413968, 0.42682, 0.832749, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wcu0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5xwao"]
bg_color = Color(0.415686, 0.427451, 0.831373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6ruu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1p5x1"]
bg_color = Color(0.415686, 0.427451, 0.831373, 1)

[node name="MenuPrincipal" type="CanvasLayer"]
script = ExtResource("1_myjg2")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_13wot")

[node name="MenuPrincipalPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.17
theme = SubResource("Theme_pmavv")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPrincipalPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -114.0
offset_right = 198.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ButtonAltura" type="Button" parent="MenuPrincipalPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_30xwk")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_un6j2")
theme_override_styles/normal = SubResource("StyleBoxFlat_pk2uy")
text = "Modo Altura
"

[node name="ButtonTiempo" type="Button" parent="MenuPrincipalPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_30xwk")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_8wcu0")
theme_override_styles/normal = SubResource("StyleBoxFlat_5xwao")
text = "Modo Tiempo"

[node name="ButtonSalir" type="Button" parent="MenuPrincipalPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_30xwk")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_k6ruu")
theme_override_styles/normal = SubResource("StyleBoxFlat_1p5x1")
text = "Salir"

[node name="NombreJuego" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.505
anchor_top = 0.06
anchor_right = 0.54
anchor_bottom = 1.0
offset_left = -311.76
offset_top = 0.120003
offset_right = 310.92
offset_bottom = -494.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_30xwk")
theme_override_font_sizes/font_size = 120
text = "Climbing Pepe"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -200.0
offset_right = 387.0
offset_bottom = 200.0
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.017
anchor_top = 0.017
anchor_right = 0.951
anchor_bottom = 1.049
offset_left = 162.579
offset_top = -40.8
offset_right = 181.963
offset_bottom = -82.6
grow_vertical = 2
rotation = 0.767945
texture = ExtResource("3_608ic")
expand_mode = 1

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -201.5
offset_bottom = 201.5
grow_horizontal = 0
grow_vertical = 2

[node name="TextureRect3" type="TextureRect" parent="Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.064
anchor_right = 1.014
anchor_bottom = 0.989
offset_left = -57.04
offset_top = 213.708
offset_right = -61.32
offset_bottom = 209.933
grow_horizontal = 0
grow_vertical = 2
rotation = -0.767945
texture = ExtResource("3_608ic")
expand_mode = 1

[connection signal="pressed" from="MenuPrincipalPanel/VBoxContainer/ButtonAltura" to="." method="_on_button_altura_pressed"]
[connection signal="pressed" from="MenuPrincipalPanel/VBoxContainer/ButtonTiempo" to="." method="_on_button_tiempo_pressed"]
[connection signal="pressed" from="MenuPrincipalPanel/VBoxContainer/ButtonSalir" to="." method="_on_button_salir_pressed"]
